# fusm_data

./: .gitignore  README.md  manage.py  pyproject.toml
finanzas/: models.py
fusm_data/: asgi.py  settings.py  urls.py  wsgi.py
maquinas/: admin.py  apps.py  routing.py  serializers.py  views.py
maquinas/migrations/: 0001_initial.py  0002_auto_20200330_2003.py
maquinas/models/: __init__.py  mantenimiento.py  maquina.py  tipos.py
perfiles/: admin.py  routing.py  serializers.py  views.py
perfiles/migrations/: 0001_initial.py  0002_auto_20200330_2003.py
perfiles/models/: __init__.py  capacitacion.py  persona.py  profesional.py  tipos.py  usm.py
proyectos/: admin.py
proyectos/migrations/: 0001_initial.py  0002_auto_20200330_2003.py
proyectos/models/: __init__.py  empresa.py  proyecto.py
sistema/: admin.py  models.py  serializers.py  urls.py  views.py
sistema/migrations/: 0001_initial.py
tools/: base.py
trabajos/: admin.py  apps.py
trabajos/migrations/: 0001_initial.py
trabajos/models/: __init__.py  contexto.py  tipos.py  trabajo.py
